k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "app-routing-group"
    alb.ingress.kubernetes.io/load-balancer-name: "app-alb"
    alb.ingress.kubernetes.io/subnets: subnet-04b9576408b6256b2,subnet-065cdada683c653e6
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 3001
          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 3000
